# jubellos_api

./: Dockerfile  docker-compose.yml  pyproject.toml
jubellos_api/: app.py  db.py  deps.py  models.py  router.py
