[tool.poetry]
name = "jubellos-api"
version = "0.1.0"
description = ""
authors = ["JanOscH <63140174+ideentwickler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
